# adviz

./: Makefile  pyproject.toml
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  README.rst  TODO.rst
adviz/: __init__.py  __main__.py  _wrangling.py
adviz/references/: __init__.py
adviz/references/_data/: make_datasets.py
adviz/scoring/: __init__.py
tests/: __init__.py  test_fuel.py
