[tool.poetry]
name = "adviz"
version = "0.1.0"
description = ":bar_chart: Solid reasons to show after the fact!"
license = "MIT"
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.rst"
repository = "https://github.com/apehex/adviz.git"
keywords = ["dataviz", "machine-learning"]

[tool.poetry.dependencies]
python = "^3.7"
geopy = "*"
googlemaps = {version = "*", optional = true}
nltk = "*"
numpy = "*"
pandas = "*"
pymongo = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
sphinx = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
